# sg-pseo-agency-pages

./: .env.example  .gitignore  README.md  pyproject.toml
app/: generate_keywords_posts.py  generate_page_content.py  main.py
app/utils/: __init__.py  anthropic_client.py  openai_client.py  perplexity_client.py
input/: pages.csv
tests/: test_anthropic_client.py  test_basic.py  test_openai_client.py  test_openai_dalle3.py  test_perplexity_client.py
