[tool.poetry]
name = "sg-pseo-agency-pages"
version = "0.1.0"
description = "Tool for (re)generating pSEO agency pages content"
authors = ["Nerijus Masikonis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
python-dotenv = "^1.1.0"
anthropic = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-s"  # Always show print statements in test output
